--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://antoniobiasotti.github.io'
+baseURL = 'https://antoniobiasotti.github.io/portfolio'
 languageCode = 'en-us'
 title = 'Antônio Biasotti'
 theme = 'typo'
